fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,12 @@ body {
 .opener {
   display: table;
   height: 100%;
+  margin: 0 auto;
 }
 .opener-text {
   display: table-cell;
   vertical-align: middle;
+  width: 800px;
 }
 .opener-txt {
   margin: 20px 0;
